# agentverse

./: .env.example  .gitignore  README.md  example.py  pyproject.toml  requirements.txt
AdvancedTimeSeriesModel/: model.py  utils.py
AdvancedTimeSeriesModel/TimeSeriesProject/models/: lstm_transformer_model.py
AdvancedTimeSeriesModel/models/: time_series_model.py
AdvancedTimeSeriesModel/my_time_series_project/model/: lstm_transformer.py
AdvancedTimeSeriesModel/time_series_project/: data_prep.py  model.py  time_series_model.py  train.py  utils.py
AdvancedTimeSeriesModel/time_series_project/TimeSeriesModel/: hybrid_model.py  model.py  train.py  utils.py
agentverse/: __init__.py  formatter.py  griptape_agent.py  main.py  multion_agent.py  open_interpreter.py
